# fungible-app-tutorial

./: .gitignore  Cargo.toml  README.md
src/: contract.rs  lib.rs  service.rs  state.rs
tests/: cross_chain_tests.rs  readme.rs
web-frontend/src/: App.js
