[package]
name = "fungible"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = []


[dependencies]
async-graphql = { version = "7.0.2", default-features = false }
linera-sdk = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
linera-sdk = { version = "0.11.0", features = ["test", "wasmer"] }
linera-service = { version = "0.11.0", features = ["test"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "fungible_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
